# ftscop

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/: ftmalloc.h
libft/: ft.h
libft/include/: ft_math.h  libft.h  mat.h
resources/shaders/: circle.geom  color_to_normal.geom  cone.geom  cube.geom  grid.frag  grid.geom  grid.vert  noshading.frag  noshading.vert  phong.frag  phong.geom  phong.vert
src/: app.c  app.h  app_poll_events.c  camera.c  camera.h  main.c  shader.c  shader.h  src.mk
src/input/: camera_handler.c  input.h  input_camera_handler.c  input_interactor.c  input_scene_handler.c  scene_handler.c
src/libft/mat/: mat3_determinant.c  mat_create.c  mat_transpose.c  mat_vec_mult.c  vec_mat_mult.c
src/libft/vec/: rgba2vec.c  to_vec3.c  vec_length.c  vec_reflect.c
src/mat/: mat4_determinant.c  mat_identity.c  mat_inverse.c  mat_mat_mult.c  mat_scalar.c
src/objparser/: objparser.c  objparser.h  objparser_common.c  objparser_grouping.c  objparser_parse.c  objparser_polygonal.c  objparser_read_float.c  objparser_read_int.c  objparser_skip_if_match.c  objparser_vertexdata.c
src/renderer/: renderer.c  renderer.h  renderer_gfx_delete.c  renderer_gfx_init.c  renderer_init_circle.c  renderer_init_cone.c  renderer_init_cube.c  renderer_init_grid.c  renderer_init_noshading.c  renderer_init_phong.c  renderer_interactor.c  renderer_interactor_rotation.c  renderer_interactor_scaling.c  renderer_interactor_translation.c  renderer_procedure.c  renderer_scene.c  shader.c  shader.h  texture.c
src/scene/: actor.c  actor_colorize.c  actor_init.c  actor_rotate.c  actor_transform.c  actor_translate.c  actor_trs.c  camera.c  mesh.c  mesh.h  scene.c  scene.h
src/vec/: vec_add.c  vec_cross.c  vec_dot.c  vec_mult.c  vec_normalize.c  vec_scalar.c  vec_sub.c
test/: scop_test.cpp  scop_test.h
